--- a/Final Project/blog.html
+++ b/Final Project/blog.html
@@ -29,6 +29,8 @@
 				<h3> Connecting Fantastic People with Amazing Nonprofit Boards </h3>
 			</div>	
 
+		<span id="blogspan"> Blogs: </span>
+
 		<ul>
 			<li id="blog1li" class="bloglist"> <h2>Adding to your Board? Top 10 Questions to Ask when Choosing a Board Recruiting Service</h2> </li>
 
@@ -394,7 +396,7 @@
 		</ul>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-		<script src="js/script.js"></script>
+		<script src="script.js"></script>
 
 
 	</body>
