--- a/Final Project/home.html
+++ b/Final Project/home.html
@@ -37,10 +37,9 @@
 
 		<div class="videocontainer">
 
-			<iframe class="desktopvideo" width="840px" height="472px" src="https://www.youtube.com/embed/aFXzYdUN4ts" align="middle" frameborder="0" allowfullscreen></iframe>"> 
+			<iframe class="desktopvideo" width="840px" height="472px" src="https://www.youtube.com/embed/aFXzYdUN4ts" align="middle"></iframe>"> 
 
-
-			<iframe class="mobilevideo" width="420px" height="236px" src="https://www.youtube.com/embed/aFXzYdUN4ts" align="middle" frameborder="0" allowfullscreen></iframe>"> 
+			<iframe class="mobilevideo" width="420px" height="236px" src="https://www.youtube.com/embed/aFXzYdUN4ts" align="middle"></iframe>"> 
 
 		</div>
 
