--- a/Final Project/home.html
+++ b/Final Project/home.html
@@ -31,7 +31,9 @@
 
 		<div class="intro">
 			<p class="intro">
-				At BoardAssist we believe: find great people for amazing nonprofit boards and fantastic things happen! We identify and personally match high impact New Yorkers with incredible boards every day. Our placements have generated over 65 million dollars for the wonderful boards we serve, over the last 15 years, with over 90% of our placements serving as leaders on their boards within 12 months of being placed.
+				At BoardAssist we believe: find great people for amazing nonprofit boards and fantastic things happen! We identify and personally match high impact New Yorkers with incredible boards every day. <br><br>
+
+				Our placements have generated over 65 million dollars for the wonderful boards we serve, over the last 15 years, with over 90% of our placements serving as leaders on their boards within 12 months of being placed.
 			</p>
 		</div>
 
