--- a/Final Project/findaboard.html
+++ b/Final Project/findaboard.html
@@ -29,7 +29,7 @@
 
 		<div class="mantra"> 
 			<h3> "The number and breadth of board choices available to me was enormous." </h3> <br>
-			<h4> -BoardAssist Candidate </h4>
+			<h3> -BoardAssist Candidate </h3>
 		</div>	
 
 		<p class="intro">
@@ -50,13 +50,11 @@
 
 		With so many nonprofits competing for our candidates, it is hard for potential trustees to make an intelligent choice as to which board is the strongest fit for them.  Once we help you select a few boards to explore, we then introduce you to these nonprofits, and stay in constant touch as you meet the nonprofits on your short list.  At the end, the best part for us is helping you decide which of the nonprofit board offers you have received to accept.<br><br>
 
-		</p>
-
-		<div class="mantra"> 
-			<h3> Fill out the application below, and we will put you in touch with nonprofits that match your interests. </h3> <br>
-		</div>			
+		</p>	
 
 		<div id="surveycontainer">
+
+		<h4 id="surveyinstructions"> Please fill out the application below, and we will get in contact with you regarding next steps. </h4> <br>
 
 			<input type="text" placeholder="Name">
 
@@ -70,7 +68,7 @@
 
 			<input type="text" placeholder="What cause or areas would you like to support?">
 
-			<input type="text" placeholder="How did you learn about BoardAssist?  Please be as specific as possible.">
+			<input type="text" placeholder="How did you learn about BoardAssist?">
 
 
 			<select id="Where do you live?">
@@ -119,6 +117,8 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src="script.js"></script>
+
+		<a href="end"
 
 	</body>
 </html>
