--- a/Final Project/findaboard.html
+++ b/Final Project/findaboard.html
@@ -19,8 +19,8 @@
 						<a href="home.html">Home</a>
 						<a href="findaboard.html">Find a Board</a>
 						<a href="addtoboard.html">Add to Your Board</a>
-						<a href="contact.html">Contact</a>
 						<a href="blog.html">Blog</a>
+						<a href="contact.html">Contact Us</a>
 					</nav>
 			</div>	
 
@@ -117,8 +117,6 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src="script.js"></script>
-
-		<a href="end"
 
 	</body>
 </html>
