--- a/Final Project/home.html
+++ b/Final Project/home.html
@@ -19,8 +19,8 @@
 						<a href="home.html">Home</a>
 						<a href="findaboard.html">Find a Board</a>
 						<a href="addtoboard.html">Add to Your Board</a>
-						<a href="contact.html">Contact</a>
 						<a href="blog.html">Blog</a>
+						<a href="contact.html">Contact Us</a>
 					</nav>
 			</div>
 		</header>
