--- a/Final Project/addtoboard.html
+++ b/Final Project/addtoboard.html
@@ -19,8 +19,8 @@
 						<a href="home.html">Home</a>
 						<a href="findaboard.html">Find a Board</a>
 						<a href="addtoboard.html">Add to Your Board</a>
-						<a href="contact.html">Contact</a>
 						<a href="blog.html">Blog</a>
+						<a href="contact.html">Contact Us</a>
 					</nav>
 			</div>	
 		</header>
@@ -50,7 +50,7 @@
 
 		</p>
 
-		<div id="surveycontainer">
+		<div id="surveycontainer2">
 
 		<h4 id="surveyinstructions"> Ready to get started?  Tell us more about your board needs by filling out the application below, and we will get in contact with you regarding next steps. </h4> <br>
 
@@ -90,8 +90,8 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src="script.js"></script>
-	
-
+		
+		<a id="bottom">
 	</body>
 </html>
 
