--- a/Final Project/findaboard.html
+++ b/Final Project/findaboard.html
@@ -117,6 +117,6 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src="script.js"></script>
-
+		<a id="bottom">
 	</body>
 </html>
