--- a/Final Project/addtoboard.html
+++ b/Final Project/addtoboard.html
@@ -32,19 +32,19 @@
 
 		<p class="intro">
 		
-		<span> BoardAssist is the best friend a nonprofit leader could have. </span> <br><br>
+		<span class="boldspan"> BoardAssist is the best friend a nonprofit leader could have. </span> <br><br>
 
 		BoardAssist is an essential tool for nonprofit leaders who often lack the time, resources or contacts to develop their boards. They know how much value strong board members can add to their organization but may not have the ability to find truly effective board candidates on their own. That’s why these nonprofits turn to BoardAssist.<br><br>
 
-		<span> Our goal is to find you a board where you can truly engage your mind, and not just your wallet. </span>  <br><br>
+		<span class="boldspan"> Our goal is to find you a board where you can truly engage your mind, and not just your wallet. </span>  <br><br>
 
 		BoardAssist clients come to us because they want more than just general board development advice or a forum for passively posting an open board position online, they need someone to actively identify and recruit high impact potential leaders for their boards. They need someone who understands and believes in their work, to tell their story passionately to the very best potential trustees, with as much enthusiasm as they would themselves. We know how competitive board recruiting can be in New York. To succeed, our nonprofit clients trust us to be on their side, energetically advocating for them, to our unrivaled candidate base of over 20,000 names. We take that trust seriously.<br><br>
 
-		<span> We understand how busy you are. </span> <br><br>
+		<span class="boldspan"> We understand how busy you are. </span> <br><br>
 
 		BoardAssist understands our clients have limited time. We listen carefully to what our clients need and want, and then initiate a search for candidates that meet these parameters. When a candidate is submitted to a client, it is rare the candidate is not asked to move forward. BoardAssist prides itself on its ability to predict strong fits. Nonprofit leaders should not have to spend time screening marginal candidates. They need BoardAssist to “get it right the first time,” and that is just what BoardAssist does. <br><br>
 
-		<span> We deliver results, outstanding leaders who support you in the important work you are doing. </span> <br><br>
+		<span class="boldspan"> We deliver results, outstanding leaders who support you in the important work you are doing. </span> <br><br>
 
 		Once on board, BoardAssist placements are excellent fits who deliver, quickly becoming active, integral members of the boards they join. Over 90% of our placements become leaders on the boards where we place them within twelve months of joining their board. Our clients often return for additional board members and refer other nonprofits to us for support. Nothing speaks more highly of BoardAssist’s impact than this measure of client satisfaction.
 
@@ -52,7 +52,7 @@
 
 		<div id="surveycontainer2">
 
-		<h4 id="surveyinstructions"> Ready to get started?  Tell us more about your board needs by filling out the application below, and we will get in contact with you regarding next steps. </h4> <br>
+		<h4 id="surveyinstructions"> Ready to get started?  <br><br> Tell us more about your board needs by filling out the application below, and we will get in contact with you regarding next steps. </h4> <br>
 
 			<input type="text" placeholder="Name of Your Organization">
 
