--- a/Final Project/contact.html
+++ b/Final Project/contact.html
@@ -25,6 +25,13 @@
 			</div>	
 		</header>
 
+		<div class="mantra"> 
+			<h3> Connecting Fantastic People with Amazing Nonprofit Boards </h3>
+		</div>
+
+		<div id="address" class="contactbox"> </div>
+		<div id="phone" class="contactbox"></div>
+		<div id="email" class="contactbox"></div>
 
 		<p> Yoooo this be the CONTACT page </p>
 
