--- a/Final Project/contact.html
+++ b/Final Project/contact.html
@@ -26,14 +26,28 @@
 		</header>
 
 		<div class="mantra"> 
-			<h3> Connecting Fantastic People with Amazing Nonprofit Boards </h3>
+			<h3> "BoardAssist found me the perfect board fit, where I could really make a difference." <br><br>
+				  -BoardAssist Candidate. 
+			</h3>
 		</div>
 
-		<div id="address" class="contactbox"> </div>
-		<div id="phone" class="contactbox"></div>
-		<div id="email" class="contactbox"></div>
-
-		<p> Yoooo this be the CONTACT page </p>
-
+		<div class="contactcontainer">
+			<div id="address" class="contactbox"> 
+				<span class="boldspan"> <p class="intro"> Address </span> <br><br>
+					250 Greenwich Street <br>
+					New York, NY 10007
+				</p>
+			</div>
+			<div id="phone" class="contactbox"></div>
+				<span class="boldspan"> <p class="intro"> Phone </span> <br><br>
+					212-389-5520
+					</p>
+			</div>
+			<div id="email" class="contactbox"></div>
+				<span class="boldspan"> <p id="email"> Email </span> <br><br>
+					<a href"mailto:CR@BoardAssist.org">Cynthia@BoardAssist.org</a>
+				</p>
+			</div>	
+		</div>
 	</body>
 </html>
