--- a/Final Project/contact.html
+++ b/Final Project/contact.html
@@ -32,20 +32,10 @@
 		</div>
 
 		<div class="contactcontainer">
-			<div id="address" class="contactbox"> 
-				<span class="boldspan"> <p class="intro"> Address </span> <br><br>
-					250 Greenwich Street <br>
-					New York, NY 10007
-				</p>
-			</div>
-			<div id="phone" class="contactbox"></div>
-				<span class="boldspan"> <p class="intro"> Phone </span> <br><br>
-					212-389-5520
-					</p>
-			</div>
-			<div id="email" class="contactbox"></div>
-				<span class="boldspan"> <p id="email"> Email </span> <br><br>
-					<a href"mailto:CR@BoardAssist.org">Cynthia@BoardAssist.org</a>
+			<div id="email" class="contactbox"> 
+				<span class="boldspan"> <p class="intro"> Email </span> <br><br>
+				<img id="cynthia" src="img/cynthia.jpg">
+					<a href="mailto:CR@BoardAssist.org">Cynthia@BoardAssist.org</a>
 				</p>
 			</div>	
 		</div>
