--- a/Final Project/blog.html
+++ b/Final Project/blog.html
@@ -275,7 +275,7 @@
 
 			</p>
 
-			<li id="blog6li" class="bloglist"> <h2>Volunteering vs. Serving on a Board vs. Donating – What Nonprofit Role is Best for You?</h2> </li>
+			<li id="blog6li" class="bloglist"> <h2>Volunteering vs. Serving on a Board vs. Donating. What Nonprofit Role is Best for You?</h2> </li>
 
 			<p id="blog6" class="blog">As New York’s leading personalized nonprofit board matching service, BoardAssist is approached daily by New Yorkers who want to make a difference in the nonprofit world but don’t know how to get started. For many, the decision has been made to give back, but they aren’t sure if they want to do so by joining a board, or just volunteering, or simply being a generous donor. For others, they want to join a board but are unclear on what the difference is between a full governing board seat, an advisory board role or a junior board position.<br><br>
 
