--- a/Final Project/contact.html
+++ b/Final Project/contact.html
@@ -39,5 +39,7 @@
 				</p>
 			</div>	
 		</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+		<script src="script.js"></script>
 	</body>
 </html>
