--- a/class07/startup-matchmaker/index.html
+++ b/class07/startup-matchmaker/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<title>Startup Matchmaker</title>
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic' rel='stylesheet' type='text/css'>
-	<link href="css/reset.css">
-	<link href="css/main.css">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<header id="page-header">
@@ -13,6 +13,11 @@
 			<h1><a href="index.html">Startup Matchmaker</a></h1>
 			<nav>
 				<ul>
+					<li>
+						<div class="line"></div>
+						<div class="line"></div>
+						<div class="line"></div>
+					</li>
 					<li><strong><a href="developers.html">Developers</a></strong></li>
 					<li><strong><a href="designers.html">Designers</a></strong></li>			
 					<li><a href="how.html">How it Works</a></li>			
@@ -22,7 +27,7 @@
 			</nav>
 		</div>
 	</header>
-	<p class="tagline">Because two brains <del>taste</del> <ins>are</ins> better than one.</p>
+	<p class="tagline">Because two brains <del>taste</del> <ins>are</ins> better than&nbsp;one.</p>
 	<section class="banner">
 		<div class="wrapper">
 			<div class="blurb">
@@ -59,7 +64,10 @@
 	</div>
 	<footer>
 		<div class="wrapper">
+			© 2013 Startup Matchmaker. Made in NY.
 		</div>
 	</footer>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="js/index.js"></script>
 </body>
 </html>
