--- a/class09/homework/calculator-box/index.html
+++ b/class09/homework/calculator-box/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Calculator Box</title>
+		<title>Calculator</title>
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 
@@ -13,7 +13,7 @@
 				<div id="a30">+30</div>
 			</div>
 			<div class="row">
-				<div id="red">Red</div>
+				<div id="orange">Orange</div>
 				<div id="out">0</div>
 				<div id="blue">Blue</div>
 			</div>
