--- a/class13/homework/cash-register/index.html
+++ b/class13/homework/cash-register/index.html
@@ -7,7 +7,7 @@
 
   <title>Cash Register</title>
 
-    <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
+    <linkhref="css/style.css" media="screen" type="text/css" />
 
 </head>
 
@@ -15,7 +15,7 @@
 
   <div id="register">
   <div id="ticket">
-    <h1>Thank You!</h1>
+    <h1>Cash Register</h1>
     <table>
       <tbody id="entries">
       </tbody>
